MacViews: Don't wait for frames on new tabs

Only have a non-zero deadline when resizing -- otherwise new tab
creation and tab-switch can feel janky.

Bug: 855364
Change-Id: If198085e418f0bf9ed5af47833d23df0c37c47c7
Reviewed-on: https://chromium-review.googlesource.com/1121630
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Commit-Queue: ccameron <ccameron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571781}
Former-commit-id: 77c834543d85b864c678d55e8cf6e4212d5bab38