content/browser/renderer_host/browser_compositor_view_mac.h
@@ -149,7 +149,7 @@ class CONTENT_EXPORT BrowserCompositorMac : public DelegatedFrameHostClient,
   // ui::LayerObserver implementation:
   void LayerDestroyed(ui::Layer* layer) override;
 
-  cc::DeadlinePolicy GetDeadlinePolicy() const;
+  cc::DeadlinePolicy GetDeadlinePolicy(bool is_resize) const;
 
   // The state of |delegated_frame_host_| and |recyclable_compositor_| to
   // manage being visible, occluded, hidden, or drawn via a ui::Layer. Note that
